<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorLightGray"
    android:padding="@dimen/padding_10dp"
    android:id="@+id/row_news">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_80dp"
        android:gravity="center_vertical"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImg_commentlist"
            android:layout_marginTop = "@dimen/padding_10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/nav_header_desc"
            android:gravity="center"
            app:srcCompat="@mipmap/ic_launcher_round" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/userImg_commentlist">
            <TextView
                android:id="@+id/tvUsername_commentlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_settings"
                android:textColor="@color/colorText"
                android:textSize="@dimen/font_18sp"
                android:layout_marginLeft="@dimen/padding_10dp"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/tvTime_commentlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_12dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorText"
                android:textSize="@dimen/font_16sp"/>
        </LinearLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvMessage_commentlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:gravity="center_vertical"
            android:textColor="@color/colorText"
            android:textSize="@dimen/font_16sp"/>
    </LinearLayout>
</LinearLayout>