<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/mainLinear_notesaddfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/padding_10dp"
        android:gravity="center_vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_6dp"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summarizetheevent"
                android:layout_marginLeft="@dimen/padding_10dp"/>
            <EditText
                android:id="@+id/etSummary_notesaddfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/summarizetheevent"
                android:padding="@dimen/padding_10dp"
                android:background="@drawable/rounded_border_background"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/padding_6dp"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginLeft="@dimen/padding_10dp"/>
            <EditText
                android:id="@+id/etDetails_notesaddfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details"
                android:padding="@dimen/padding_10dp"
                android:background="@drawable/rounded_border_background"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/area"
            android:layout_marginTop="@dimen/padding_6dp"
            android:layout_marginLeft="@dimen/height_20dp"
            />
        <LinearLayout
            android:id="@+id/lnArea_notesaddfragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            android:padding="@dimen/padding_10dp">
            <Spinner
                android:id="@+id/arearspinner_notesaddfragment"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generalkeyword"
            android:layout_marginTop="@dimen/padding_6dp"
            android:layout_marginLeft="@dimen/height_20dp"
            />
        <LinearLayout
            android:id="@+id/lnGeneralkey_notesaddfragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            android:padding="@dimen/padding_10dp">

            <Spinner
                android:id="@+id/generalkeyspinner_notesaddfragment"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specifickeywords"
            android:layout_marginTop="@dimen/padding_6dp"
            android:layout_marginLeft="@dimen/height_20dp"
            />
        <LinearLayout
            android:id="@+id/lnSpecificKey_notesaddfragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            android:padding="@dimen/padding_10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/specifickeyspinner_notesaddfragment"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstselectageneralkeyword"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="@dimen/height_20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/category"
            android:layout_marginTop="@dimen/padding_6dp"
            android:layout_marginLeft="@dimen/height_20dp"
            />
        <LinearLayout
            android:id="@+id/lnCategory_notesaddfragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/categoryspinner_notesaddfragment"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/accommodation"
            android:layout_marginTop="@dimen/padding_6dp"
            android:layout_marginLeft="@dimen/height_20dp"/>
        <LinearLayout
            android:id="@+id/lnAccommo_notesaddfragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:layout_marginLeft="@dimen/padding_10dp"
            android:layout_marginRight="@dimen/padding_10dp"
            android:orientation="horizontal">

            <com.wecareit.MultiSpinner
                android:id="@+id/accommospinner_notesaddfragment"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:prompt="@string/timeintervalspinner_prompt"/>
        </LinearLayout>
        <CheckBox
            android:id="@+id/chxBackdated_noteaddfragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_10dp"
            android:text="@string/backdated"
            android:checked="false"/>
        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnClear_notesaddfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_20sp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrange"
                android:layout_marginRight="@dimen/padding_6dp"
                android:text="@string/clear"/>
            <Button
                android:id="@+id/btnSubmit_notesaddfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_20sp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorGreen"
                android:layout_marginLeft="@dimen/padding_6dp"
                android:text="@string/used"/>
        </LinearLayout>-->
    </LinearLayout>
    </ScrollView>
</LinearLayout>