<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_6dp"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/expandLinear_tasksfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/padding_6dp">
            <TextView
                android:layout_width="@dimen/width_120dp"
                android:layout_height="match_parent"
                android:text="@string/status"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/colorText"/>
            <Spinner
                android:id="@+id/statusspinner_tasksfragment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_6dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/width_120dp"
                android:layout_height="match_parent"
                android:text="@string/created_date"
                android:textSize="@dimen/font_16sp"
                android:textColor="@color/colorText"/>
            <Spinner
                android:id="@+id/timeintervalspinner_tasksfragment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/spinner_prompt"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_18dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnClear_tasksfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_20sp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorOrange"
                android:layout_marginRight="@dimen/padding_6dp"
                android:text="@string/clear"/>
            <Button
                android:id="@+id/btnUsed_tasksfragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/font_20sp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorGreen"
                android:layout_marginLeft="@dimen/padding_6dp"
                android:text="@string/used"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/emptylinear_notesfragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_20sp"
            android:textColor="@color/colorText"
            android:gravity="center_vertical"
            android:text="Inga aktiviteter än för 3 december - 9 december."/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/framgment_tasks_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </android.support.v7.widget.RecyclerView>
    </ScrollView>
</LinearLayout>