<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_6dp"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/padding_6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnHeader_eventsupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/editHeader_eventsupdatefragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/padding_6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnDesc_eventsupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/editDescription_eventsupdatefragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/padding_6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startdate"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnDate_eventsupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/editDatePicker_eventsupdatefragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:focusable="false"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/padding_6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/starttime"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnTime_eventsupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/editTimePicker_eventsupdatefragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/timestart"
                    android:focusable="false"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/padding_6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/length"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnTimeinterval_eventupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <Spinner
                    android:id="@+id/timeintervalSpinner_eventsupdatefragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_6dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/vehicle"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnVehicle_eventupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <com.wecareit.MultiSpinner
                    android:id="@+id/vehicleSpinner_eventsupdatefragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_6dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/employees"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnUser_eventupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <com.wecareit.MultiSpinner
                    android:id="@+id/userSpinner_eventsupdatefragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_6dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accommodation"
                android:layout_marginLeft="@dimen/padding_10dp"
                />
            <LinearLayout
                android:id="@+id/lnClient_eventupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:orientation="vertical">
                <com.wecareit.MultiSpinner
                    android:id="@+id/clientSpinner_eventsupdatefragment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spinner_prompt"/>
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>